# ZSAT

./: .gitignore  Cargo.toml  README.md  notes.md
resources/: sat_params.json
src/: check_satisfiability.rs  clause.rs  config.rs  errors.rs  lib.rs  lifted_bool.rs  literal.rs  local_search.rs  log.rs  logging.rs  missing_types.rs  model.rs  parallel.rs  parameters.rs  resource_limit.rs  solver.rs  statistics.rs  status.rs  symbol_table.rs  watched.rs
src/approximate_set/: approximate_set_trait.rs  mod.rs  ored_integer_set.rs
src/data_structures/: mod.rs  moving_average.rs  random.rs  statistics.rs  true_false_vectors.rs  vector_pool.rs
src/data_structures/approximate_set/: approximate_set_trait.rs  mod.rs  ored_integer_set.rs
src/local_search/: config.rs  constraint.rs  local_search.rs  mod.rs  variable_info.rs
